--- a/index.html
+++ b/index.html
@@ -320,22 +320,19 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						</header>
 						<div class="content">
 							<p>Ob organisatorische Unterstützung, eine hochwertige Live- oder Studioaufnahme oder das Erschaffen einer besonderen Atmosphäre: Bei mir bist du richtig!</p>
-							<form>
-								<div class="fields">
-									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" placeholder="Nachricht" rows="7"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Absenden" class="button primary" /></li>
-								</ul>
-							</form>
+							<ul class="items">
+								<li>
+									<h3>Email</h3>
+									<a href="#">hallo@leonardlentz.de</a>
+								</li>
+								<li>
+									<h3>Elsewhere</h3>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									</ul>
+								</li>
+							</ul>
 						</div>
 						<footer>
 							<ul class="items">
@@ -369,4 +366,5 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 
 	</body>
 </html>
+
 
