--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									<h3>Email</h3>
 									<a href="#">hallo@leonardlentz.de</a>
 								</li>
+								<!-- Socials hier wieder aktivieren
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
@@ -332,6 +333,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</li>
+								-->
 							</ul>
 						</div>
 						<footer>
@@ -353,6 +355,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
