--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Leonard Lentz</h1>
-							<p>Projektmanager, Recording Engineer, Lichtdesigner</p>
+							<p>Projektmanagement, Recording, Lichtdesign</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -38,7 +38,7 @@
 							<h2>Über mich</h2>
 						</header>
 						<div class="content">
-							<p>Ich mache Musik möglich. Ob im Projektmanagement, durch Audioaufnahmen oder das Erzeugen einer einzigartigen Lichtdramaturgie, welche Hand in Hand mit der Musik geht. Ich arbeite mit Ensembles wie dem RIAS Kammerchor Berlin, der Lautten Compagney Berlin oder dem Kammerchor Vocantare. Mein Studium der Musikwissenschaft sowie mein eigenes Musizieren ermöglichen mir ein analytisch-ästhetisch detailreiches Arbeiten.</p>
+							<p>Ich mache Musik möglich. Ob im Projektmanagement, durch Audioaufnahmen oder das Erzeugen einer synergetischen Lichtshow. Ich arbeite für Ensembles wie dem RIAS Kammerchor Berlin, der Lautten Compagney Berlin oder dem Kammerchor Vocantare. Mein Studium der Musikwissenschaft sowie mein eigenes Musizieren ermöglichen mir ein analytisch-ästhetisch detailreiches Arbeiten.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -355,6 +355,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
