--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>Über mich</h2>
 						</header>
 						<div class="content">
-							<p>Ich mache Musik möglich. Ob im Projektmanagement, durch Audioaufnahmen oder das Erzeugen einer synergetischen Lichtshow. Ich arbeite für Ensembles wie dem RIAS Kammerchor Berlin, der Lautten Compagney Berlin oder dem Kammerchor Vocantare. Mein Studium der Musikwissenschaft sowie mein eigenes Musizieren ermöglichen mir ein analytisch-ästhetisch detailreiches Arbeiten.</p>
+							<p>Ich mache Musik möglich. Ob im Projektmanagement, durch Audioaufnahmen oder das Erzeugen einer synergetischen Lichtshow. Ich arbeite für Ensembles wie den <a href="https://www.rias-kammerchor.de/">RIAS Kammerchor Berlin</a>, der <a href="https://www.lauttencompagney.de/">Lautten Compagney Berlin</a> oder dem <a href="https://vocantare.de/">Kammerchor Vocantare</a>. Meine Konzertaufnahmen wurden mehrfach im <a href="https://www.deutschlandfunkkultur.de/">Deutschlandfunk Kultur</a> im Rahmen der Sendung "Chormusik" gesendet. Mein Studium der Musikwissenschaft sowie mein eigenes Musizieren ermöglichen mir ein analytisch-ästhetisch detailreiches Arbeiten.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -355,6 +355,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
